# wal2http

./: .env  .gitignore  Cargo.toml  Dockerfile  EVENT_SINK.md  PRODUCTION_READINESS.md  README.md  dockerfile  event_sink_implementation_plan.md  event_sink_refactoring_plan.md  example_structured_logging.md  http_event_sink_architecture.md  http_event_sink_classes.md  http_event_sink_commit_strategy.md  http_event_sink_implementation_plan.md  http_event_sink_modules.md  http_event_sink_sequence.md  modular_event_sink_implementation_plan.md  test_email_server.js  test_event_sink_env.sh  test_hook0_server.js  test_hook0_sink.sh  test_http_server.js  test_http_sink.sh
src/: buffer.rs  config.rs  email_config.rs  errors.rs  event_sink.rs  logging.rs  main.rs  parser.rs  server.rs  test_graceful_shutdown.rs  tracing_context.rs  types.rs  utils.rs
src/core/: config.rs  email_config.rs  mod.rs
src/event_sink/: event_formatter.rs  hook0.rs  hook0_error.rs  http.rs  mod.rs  pg_type_conversion.rs  sink.rs  stdout.rs
src/events/: mod.rs  sink.rs
src/events/processors/: mod.rs
src/events/sink/: event_formatter.rs  hook0.rs  hook0_error.rs  http.rs  pg_type_conversion.rs  stdout.rs
src/protocol/: buffer.rs  messages.rs  mod.rs  parser.rs
src/replication/: mod.rs  server.rs  state.rs
src/utils/: binary.rs  connection.rs  mod.rs  timestamp.rs
