[package]
name = "pg_replica_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libpq-sys = "0.8"
libc = "0.2.174"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json"] }
tracing-appender = "0.2.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
